# repro-rules-py

./: .gitignore  README.md
repo1/: .bazelrc  MODULE.bazel
repo1/python/: BUILD.bazel  foo.py
repo1/python/test/: BUILD.bazel
repo2/: MODULE.bazel  WORKSPACE.bazel
repo2/python/test/: BUILD.bazel  test.py
